# jiralogreporter

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
jiralogreporter/: cli.py  reporter.py
scripts/: release.sh
