[metadata]
name = jiralogreporter
version = attr: jiralogreporter.__version__
description = A kubernetes shell
author = João Pinto
author_email = joao.pinto@vshn.ch
url = https://github.com/joaompinto/jiralogreporter
license = BSD-3

[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = jiralogreporter/_version.py
versionfile_build = jiralogreporter/_version.py
tag_prefix =
parentdir_prefix = jiralogreporter-

[options.entry_points]
console_scripts =
    jiralogreporter = jiralogreporter.cli:main
